--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # URL of the Site
 url: 'https://juliapenndorf.github.io/'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: juliapenndorf.github.io
+baseurl: 
 
 # Title of the Site
 title: Julia Penndorf
