--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # URL of the Site
 url: 'https://juliapenndorf.github.io'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: 'juliapenndorf.github.io'
+baseurl: 
 
 # Title of the Site
 title: Julia Penndorf
@@ -23,7 +23,7 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
 email: julia.penndorf@gmail.com
-bsky_username: julia-penndorf.bsky.social‬
+bsky_username: 
 twitter_username: 
 instagram_username: 
 linkedin_username: 
