--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ baseurl:
 # Title of the Site
 title: Julia Penndorf
 # Description of the Site
-description: Behavioural ecologist
+description: site under construction
 # URL of Image of the Site
 site-image: /WhatATheme/assets/images/meta.jpg
 # Keywords of the Site
-site-keywords: Julia Penndorf, Behavioural ecology, social cognition, social networks
+site-keywords: 
 # URL for the Image of custom Favicon
 favicon-url: 
 
